...
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <!-- app global -->
    <string name="app_name">BOINC</string>

    <!-- generic. used by multiple Activities/tabs -->
    <string name="generic_loading">Loading! Please wait&#8230;</string>
    <string name="generic_button_continue">Continue</string>
    <string name="generic_button_finish">Finish</string>

...
    <string name="main_error">Whooops</string>
    <string name="main_error_long">&#8230;this should not happen!\nClick on the icon to try again.</string>
    <string name="main_title_icon_desc">BOINC icon</string>

    <!-- tab names -->
    <string name="tab_status">Status</string>
    <string name="tab_projects">Projects</string>
    <string name="tab_tasks">Tasks</string>
    <string name="tab_transfers">Transfers</string>
    <string name="tab_preferences">Preferences</string>
    <string name="tab_notices">Notices</string>
    <string name="tab_desc">Navigation</string>

    <!-- status strings -->
    <string name="status_running">Computing</string>
    <string name="status_running_long">Thank you for participating.</string>
    <string name="status_paused">Suspended</string>
...

    <!-- notices tab strings -->
    <string name="notices_loading">Reading notices&#8230;</string>

    <!-- eventlog tab strings -->
    <string name="eventlog_loading">Loading log messages&#8230;</string>
    <string name="eventlog_client_header">Client Messages</string>
    <string name="eventlog_gui_header">GUI Messages</string>
    <string name="eventlog_copy_toast">Log copied to clipboard.</string>
    <string name="eventlog_email_subject">Event Log for BOINC on Android:</string>

    <!-- suspend reasons -->
    <string name="suspend_unknown">Computation suspended.</string>
    <string name="suspend_batteries">Connect your device to a charger to continue computing.</string>
...
    <string name="rpcreason_unknown">Unknown reason</string>

    <!-- menu -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_emailto">Send as Email</string>
    <string name="menu_copy">Copy to Clipboard</string>
    <string name="menu_eventlog">Event Log</string>
    <string name="menu_exit">Exit BOINC</string>
    <string name="menu_run_mode_disable">Suspend</string>
    <string name="menu_run_mode_enable">Resume</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <!-- about dialog -->
    <string name="about_button">Return</string>
    <string name="about_title">About</string>
    <string name="about_name">BOINC</string>
    <string name="about_version">Version</string>
    <string name="about_name_long">Berkeley Open Infrastructure for Network Computing</string>
    <string name="about_copyright">\u00A9 2003&#8211;2016 University of California, Berkeley.</string>
    <string name="about_copyright_reserved">All Rights Reserved.</string>
...
