...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/title"
            style="@style/ActionBarDayNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:singleLine="true"
...
            android:textColor="?android:attr/textColorPrimary"
            android:layout_margin="10dp"
            android:text="@string/about_credits"
            android:gravity="center_horizontal"/>

    <Button
            android:id="@+id/returnB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
...
